<resources>
    <string name="app_name">381assignment1_3</string>
    <string name="textView1">Settings</string>
    <string name="textView2">Allow Notifications</string>
    <string name="textView3">Volume</string>
    <string name="textView4">Telephone Number</string>

    <string name="editText1">
        <br>Summary of settings: \n</br>
        <br>Notifications: \n</br>
        <br>Volume: \n</br>
        <br>Phone number: \n</br>
        <br>Range: </br>

    </string>
</resources>
